--- a/app/src/main/res/layout/card_fav.xml
+++ b/app/src/main/res/layout/card_fav.xml
@@ -32,12 +32,12 @@
             android:id="@+id/layout_fav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="@{()->action.onFavClick(forecast)}"
-            android:background="@drawable/gradient_card_bg">
+            android:background="@drawable/gradient_card_bg"
+            android:onClick="@{()->action.onFavClick(forecast)}">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="70dp"
+                android:layout_width="60dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="10dp"
@@ -53,24 +53,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="12dp"
-                android:onClick="@{()->action.onDeleteClick(forecast)}"
                 android:background="@android:color/transparent"
+                android:onClick="@{()->action.onDeleteClick(forecast)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/delete" />
 
             <TextView
                 android:id="@+id/text_location"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
                 android:drawableLeft="@drawable/location_navy"
-                android:text="Alexandria"
+                android:gravity="center"
+                android:inputType="textMultiLine|textImeMultiLine"
+                android:text="america/Los_angelos"
                 android:textColor="@color/navy"
-                android:textSize="26sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/text_desc"
+                app:layout_constraintEnd_toStartOf="@+id/text_tempNum"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintStart_toStartOf="@+id/text_desc"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,11 +81,11 @@
                 android:id="@+id/text_tempUnits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="38dp"
-                android:layout_marginBottom="55dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginBottom="48dp"
                 android:text="°C"
                 android:textColor="@color/light_xl_blue"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -91,11 +94,11 @@
                 android:id="@+id/text_tempNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-10dp"
+                android:layout_marginTop="-15dp"
                 android:fontFamily="sans-serif"
                 android:text="22"
                 android:textColor="@color/light_xl_blue"
-                android:textSize="60sp"
+                android:textSize="48sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/text_tempUnits"
@@ -103,14 +106,14 @@
 
             <TextView
                 android:id="@+id/text_desc"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="46dp"
+                android:gravity="center"
                 android:text="Mostly Clear"
                 android:textColor="@color/light_xl_blue"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/text_tempNum"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/text_location" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
