--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -48,6 +48,11 @@
         <action
             android:id="@+id/action_favoriteFragment_to_mapsFragment"
             app:destination="@id/mapsFragment" />
+        <argument
+            android:name="myLocation"
+            app:argType="com.google.android.gms.maps.model.LatLng"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/notificationFragment"
@@ -86,5 +91,8 @@
         <argument
             android:name="from"
             app:argType="string" />
+        <action
+            android:id="@+id/action_mapsFragment_to_favoriteFragment"
+            app:destination="@id/favoriteFragment" />
     </fragment>
 </navigation>
